--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,20 +3,19 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	<link rel="stylesheet" href="/style.css" type="text/css" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<title> MVC With Cats!</title>
+	<title> BookHub!</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous"></script>
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-		crossorigin="anonymous"></script>
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+	</script>
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/assets/js/cats.js"></script>
+	<script src="/index.js"></script>
 </head>
 
 <body>
@@ -30,21 +29,20 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="#"> Saved Books <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/saved"> Saved Books <span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
-			<form class="form-inline">
-				<button class="btn btn-outline-success" type="button">Scrape New Books</button>
-				<button class="btn btn-sm btn-outline-secondary" type="button">Delete All Books</button>
-			</form>
 		</div>
 	</nav>
-	<div class="jumbotron jumbotron-fluid header">
+	<div class="jumbotron jumbotron-fluid header text-white"
+		style="background: url('/bg.jpg');background-size: 100% auto;background-position: 50% 10%;">
+		<div class="container">
 			<h1 class="display-4">BookHub</h1>
 			<p class="lead">Which books would you like to read?</p>
+		</div>
 	</div>
 	{{{ body }}}
 </body>
